<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <EditText
        android:id="@+id/et_email_name"
        style="@style/AccountEditStyle"
        android:layout_marginTop="9dp"
        android:hint="@string/content_please_enter_mailbox"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/speed_button_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/reveal"
            android:hint="@string/content_mailbox_verification_code"
            android:paddingLeft="16dp"
            android:textColorHint="@color/default_hint_text_color"
            android:textSize="15dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#e7e7e7e8"
            android:visibility="gone" />

        <com.libracore.lib.widget.TimerButton
            android:id="@+id/tb_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="21dp"
            android:background="@color/reveal"
            android:text="@string/content_get_the_verifying_code"
            android:textColor="@color/color_5993c9"
            android:textSize="15dp"
            app:afterText="s"
            app:countTime="60" />

    </LinearLayout>


    <EditText
        android:id="@+id/et_pwd_new"
        style="@style/AccountEditStyle"
        android:layout_marginTop="10dp"
        android:hint="@string/content_please_enter_password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/et_pwd_confirm"
        style="@style/AccountEditStyle"
        android:layout_marginTop="10dp"
        android:hint="@string/content_confirm_the_password"
        android:inputType="textPassword" />


    <com.libracore.lib.widget.StateButton
        android:id="@+id/sb_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_bind"
        android:layout_gravity="center_horizontal"
        app:normalBackgroundColor="@color/color_5993c9"
        app:normalTextColor="@color/white"
        app:pressedBackgroundColor="@color/color_4d80b0"
        app:pressedTextColor="@color/white"
        app:radius="5dp" />


</LinearLayout>