<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_cache_tip_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:text="@string/content_failure_to_pay"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_ededed" />

        <TextView
            android:id="@+id/tv_pay_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/tv_pay_content"
            android:textColor="@color/black"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/tv_pay_fial"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/suggest_bt_selected"
            android:gravity="center"
            android:text="@string/tv_i_see"
            android:textColor="@color/white"
            android:textSize="12dp" />


    </LinearLayout>
</LinearLayout>