<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc">

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/withe_btn_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/content_please_bind_the_mailbox_first"
            android:textColor="@color/color_4a4a4a"
            android:textSize="16dp" />

        <View
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="36dp"
            android:background="#d4d4d4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/t_cancel"
                android:textColor="@color/color_4a4a4a"
                android:textSize="16dp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="#d4d4d4" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/t_ok"
                android:textColor="@color/color_cd0946"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>