<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="11dp"
                android:text="@string/t_choose_payment_method"
                android:textColor="@color/color_333333"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:scaleType="center"
                android:src="@drawable/icon_pay_close_btn" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_e6e6e6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginRight="24dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:text="@string/t_actual_payment"
                    android:textColor="@color/color_999999"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tv_pay_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="32"
                    android:textColor="@color/color_ee5002"
                    android:textSize="25dp"

                    />

                <TextView
                    android:id="@+id/jian_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:background="@drawable/icon_pay_jian_bg"
                    android:padding="4dp"
                    android:textColor="@color/color_ee5002"
                    android:textSize="9dp"
                    android:visibility="invisible" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_e6e6e6" />

        <RelativeLayout
            android:id="@+id/rl_alipay"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/iv_alipay_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="28dp"
                android:src="@drawable/ic_speed_type_unselect_bg" />

            <ImageView
                android:id="@+id/iv_ailpay"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:src="@drawable/icon_alipay" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_ailpay"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_alipay_payment"
                    android:textColor="@color/color_333333"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/t_recommend_the_use_of_alipay_account"
                    android:textColor="@color/color_808080"
                    android:textSize="12dp" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_e6e6e6" />


        <RelativeLayout
            android:id="@+id/rl_weichat"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/iv_wechat_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="28dp"
                android:src="@drawable/ic_speed_type_unselect_bg" />

            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:src="@drawable/icon_pay_wechat" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_wechat"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_wechat_payment"
                    android:textColor="@color/color_333333"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/t_recommend_the_use_of_wechat_account"
                    android:textColor="@color/color_808080"
                    android:textSize="12dp" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_e6e6e6" />

        <TextView
            android:id="@+id/tv_go_pay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_ee5002"
            android:gravity="center"
            android:text="@string/t_confirm_the_payment"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>